Added the identifier and Declarations