@@ -15,21 +15,24 @@ public class LetStatementNode extends CompositeNode {
     public Result accept(VisitorInterface visitor) {
         return visitor.visit(this);
     }
+
     public Boolean hasDeclaration(){
         try {
-            this.children.get(0);
+            this.children.getFirst();
             return true;
         } catch (Exception e) {
             return false;
         }
     }
+
     public Result declaration(){
         if(hasDeclaration()){
-            return new CorrectResult<>(children.get(0));
+            return new CorrectResult<>(children.getFirst());
         } else {
             return new IncorrectResult("Let statement has no declaration.");
         }
     }
+
     public Result addDeclaration(Node expression){
         try {
             this.children.set(0, expression);
@@ -38,14 +41,16 @@ public class LetStatementNode extends CompositeNode {
             return new IncorrectResult(e.getMessage());
         }
     }
+
     public Boolean hasExpression(){
         try {
-            this.children.get(0);
+            this.children.getFirst();
             return true;
         } catch (Exception e) {
             return false;
         }
     }
+
     public Result expression(){
         if(hasExpression()){
             return new CorrectResult<>(children.get(1));
@@ -53,6 +58,7 @@ public class LetStatementNode extends CompositeNode {
             return new IncorrectResult("Let statement has no expression.");
         }
     }
+
     public Result addExpression(Node expression){
         try {
             this.children.set(1, expression);
